tests/baselines/reference/callSignaturesThatDifferOnlyByReturnType.errors.txt
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(4,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(5,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(6,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(7,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(11,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(12,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(16,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(17,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(21,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(22,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(26,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts(27,5): error TS2463: Duplicate overload signature for call signature.


==== tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesThatDifferOnlyByReturnType.ts (12 errors) ====
    // Each pair of signatures in these types has a signature that should cause an error. 
    // Overloads, generic or not, that differ only by return type are an error.
    interface I {
        (x): number;
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x): void; // error
        ~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): number;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): string; // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    interface I2 {
        <T>(x: T): number;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): string; // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    interface I3<T> {
        (x: T): number;
        ~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x: T): string; // error
        ~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    var a: {
        (x, y): Object;
        ~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x, y): any; // error
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    var a2: {
        <T>(x: T): number;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): string; // error
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }